# badnet

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  release-please.yml
examples/: bad_network.rs  dynamic_impairment.rs  latency.rs  packet_loss.rs  reorder.rs
src/: lib.rs
tests/: corrupt.rs  drop.rs  duplicate.rs  gap.rs  isolation.rs  loss.rs  loss_ge.rs  reconfigure.rs  reorder.rs
