[package]
name = "badnet"
version = "0.1.0"
edition = "2021"
description = """
Emulation of terrible networks for unit tests and more.
"""
authors = ["Grayson Head <grayson@graysonhead.net>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/graysonhead/badnet"
homepage = "https://github.com/graysonhead/badnet"

[lib]
name = "badnet"
path = "src/lib.rs"

[dependencies]
