[package]
name = "badnet"
version = "0.3.0"
edition = "2021"
description = """
Emulation of terrible networks for unit tests and more.
"""
authors = ["Grayson Head <grayson@graysonhead.net>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/graysonhead/badnet"
homepage = "https://github.com/graysonhead/badnet"
exclude = [
    ".github/*",
    "flake.lock",
    "flake.nix"
]

[lib]
name = "badnet"
path = "src/lib.rs"

[dependencies]
